Bug 1907081 - In print/preview context, always treat content-visibility:auto as visible. r=layout-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D216254